# TukiFact

./: .dockerignore  .editorconfig  .gitignore  ROADMAP.md  TukiFact.slnx  guia-testsprite-opencode.md  opencode.json
.github/workflows/: ci.yml
docker/: .env.example  Dockerfile.ai  Dockerfile.api  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
investigacion/: 01-analisis-propuesta.md  02-ecosistema-sunat.md  03-alcance-mvp.md  04-arquitectura.md  05-esquema-base-datos.md  06-endpoints-api.md  07-stack-tecnologico.md  08-modelo-pricing.md  09-plan-fases-sprints.md  10-agentes-ia.md
mejora-produccion/: 01-gre-guia-remision.md  02-sunat-produccion.md  03-detracciones-spot.md  04-icbper.md  05-sire-integracion.md  06-tipo-cambio-ruc.md  07-retenciones-percepciones.md  08-email-notificaciones.md  09-funcionalidades-complementarias.md  README.md  ROADMAP.md
plan-antes-produccion/: COMPARATIVA.md  MASTER-PLAN.md  MEGA-SPRINT-1.md  MEGA-SPRINT-2.md  MEGA-SPRINT-3.md  MEGA-SPRINT-4.md
scripts/: backup.sh  deploy.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tukifact/: __init__.py  client.py  types.py
src/sdks/python/: README.md  pyproject.toml
src/sdks/python/tukifact/: __init__.py  client.py  types.py
src/tukifact-ai/: pyproject.toml
src/tukifact-ai/app/: config.py  main.py  nats_bridge.py
src/tukifact-ai/app/agents/: analyst.py  classifier.py  conciliator.py  copilot.py  extractor.py  validator.py
src/tukifact-ai/app/routers/: agents.py  health.py
testsprite_tests/: TC001_Emit_a_document_with_multiple_items_and_land_on_accepted_detail_with_hash.py  TC001_Log_in_to_access_the_dashboard.py  TC001_Login_and_reach_dashboard.py  TC001_health_ping_returns_service_info.py  (+173 more)
(+375 files in other folders)
