[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tukifact"
version = "0.1.0"
description = "Official TukiFact API SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["tukifact", "facturacion", "electronica", "sunat", "peru"]
dependencies = ["httpx>=0.27"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://tukifact.net.pe"
Documentation = "https://developers.tukifact.net.pe/docs"
