[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tukifact"
version = "0.1.0"
description = "TukiFact SDK — Facturación Electrónica para Perú"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["tukifact", "facturacion", "sunat", "peru"]

[project.urls]
Homepage = "https://tukifact.net.pe"
Repository = "https://github.com/tukituki-solution/tukifact-sdk-python"
